set up basic site

--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,17 @@
 
 <div id="header">
     <div id="header-content">
-        <h1>Here is some heading text :)</h1>
-        <p>Here is some more content of the header...</p>
+        <h1 style="text-align: left;"><a href="index">Raffi</a></h1>
     </div>   
+    <nav>
+        <ul>
+            <li><a href="/cw">CyberWomen</a></li>
+            <li><a href="/projects">Projects</a>
+            <li><a href="/extra">Extra-curricular</a>             
+    </nav>
+
 </div>
 
-<h1>Welcome</h1>
+<h1>Projects</h1>
 </body>
 </html>
