--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 </head>
 <body>
 
-<div id="header">
-    <div id="header-content">
-        <h1 style="text-align: left;"><a href="index">Raffi</a></h1>
-    </div>   
-    <nav>
-        <ul>
-            <li><a href="/cw">CyberWomen</a></li>
-            <li><a href="/projects">Projects</a>
-            <li><a href="/extra">Extra-curricular</a>             
-    </nav>
-
-</div>
+    <div id="header">
+        <nav>
+            <h1 style="text-align: left;"><a href="index">Raffi</a></h1>
+            <ul>
+                <li><a href="/cw">CyberWomen</a></li>
+                <li><a href="/projects">Projects</a>
+                <li><a href="/extra">Extra-curricular</a>             
+        </nav>
+    
+    </div>
 
 <h1>Welcome</h1>
+<p>Please note that this website is currently being developed.</p>
 </body>
 </html>
