--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     <div id="header">
         <nav>
-            <h1 style="text-align: left;"><a href="index">Raffi</a></h1>
             <ul>
-                <li><a href="/cw">CyberWomen</a></li>
-                <li><a href="/projects">Projects</a>
-                <li><a href="/extra">Extra-curricular</a>             
+                <li><a href="/index.html">Raffi</a></li>
+                <li><a href="/cw.html">CyberWomen</a></li>
+                <li><a href="/projects.html">Projects</a>
+                <li><a href="/extra.html">Extra-curricular</a>   
+            </ul>          
         </nav>
-    
     </div>
 
 <h1>Welcome</h1>
