--- a/extra.html
+++ b/extra.html
@@ -8,19 +8,22 @@
     <title>Raffi Rizzo</title>
 </head>
 <body>
-
-    <div id="header">
+<header>
+    <h1></h1>
+    <div id="header" style="text-align: right;">
         <nav>
             <ul>
-                <li><a href="/index.html">Raffi</a></li>
-                <li><a href="/cw.html">CyberWomen</a></li>
-                <li><a href="/projects.html">Projects</a>
-                <li><a href="/extra.html">Extra-curricular</a>   
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cw.html">CyberWomen</a></li>
+                <li><a href="projects.html">Projects</a>
+                <li><a href="extra.html">Extra-curricular</a>   
             </ul>          
         </nav>
-    
     </div>
+</header>
+    
 
-<h1>Extra Curriculars</h1>
+<h1>Welcome</h1>
+<p>Please note that this website is currently being developed.</p>
 </body>
 </html>
