--- a/projects.html
+++ b/projects.html
@@ -8,18 +8,21 @@
     <title>Raffi Rizzo</title>
 </head>
 <body>
-
-<div id="header">
-    <nav>
-        <ul>
-            <li><a href="/index.html">Raffi</a></li>
-            <li><a href="/cw.html">CyberWomen</a></li>
-            <li><a href="/projects.html">Projects</a>
-            <li><a href="/extra.html">Extra-curricular</a>   
-        </ul>          
-    </nav>
-</div>
+<header>
+    <h1></h1>
+    <div id="header" style="text-align: right;">
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cw.html">CyberWomen</a></li>
+                <li><a href="projects.html">Projects</a>
+            </ul>          
+        </nav>
+    </div>
+</header>
+    
 
 <h1>Projects</h1>
+<h2>Port Scanner</h2>
 </body>
 </html>
