update all pages

--- a/cw.html
+++ b/cw.html
@@ -13,8 +13,8 @@
     <div id="header" style="text-align: right;">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="cw.html">CyberWomen</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="cw.html"><b><u>CyberWomen</u></b></a></li>
                 <li><a href="projects.html">Projects</a>
             </ul>          
         </nav>
@@ -22,6 +22,11 @@
 </header>
     
 
-<h1>CyberWomen</h1>
-</body>
+<section class="body">
+    <h1>CyberWomen Groups C.I.C</h1>
+    <p><a href="https://cyberwomengroups.org.uk/">CyberWomen Groups</a> is a Community Interest Company that is working towards increasing the gender diversity in the cyber security field. All branches are run by students at their respective universities,</p>
+    <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
+    <br>
+    <p>More info loading...</p>
+</section></body>
 </html>
