--- a/index.html
+++ b/index.html
@@ -2,27 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href='main.css' />
 
     <title>Raffi Rizzo</title>
 </head>
 <body>
-<header>
-    <h1></h1>
-    <div id="header" style="text-align: right;">
-        <nav>
+<section>
+    <div id="header" >
+        <nav style="text-align: right">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"><b><u>About</u></b></a></li>
                 <li><a href="cw.html">CyberWomen</a></li>
                 <li><a href="projects.html">Projects</a>
             </ul>          
         </nav>
     </div>
-</header>
+</section>
     
-
-<h1>Welcome</h1>
-<p>Please note that this website is currently being developed.</p>
-</body>
+<section class="body">
+    <h1>$whoami</h1>
+    <h3>Raffi Rizzo</h2>
+    <br>
+    <p>I am a second year Cyber Security student at the University of Warwick, based in the West Midlands.</p>
+    <br>
+    <p>As well as my studies, I have participated in the most recent <a href="https://www.ukcyber912.co.uk/" target="_blank">Cyber 9/12</a> challenge, with my team successfully getting through to the semi-finals of the in-person BT Tower track. On top of this, we won the award for the 'Most Engaged' team of all competing teams.</p>
+</section>
+</body>  
 </html>
