--- a/projects.html
+++ b/projects.html
@@ -13,16 +13,18 @@
     <div id="header" style="text-align: right;">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="cw.html">CyberWomen</a></li>
-                <li><a href="projects.html">Projects</a>
+                <li><a href="projects.html"><b><u>Projects</u></b></a>
             </ul>          
         </nav>
     </div>
 </header>
     
+<section class="body">
+    <h1>Projects</h1>
+    <p>This page is pending...</p>
+</section>
 
-<h1>Projects</h1>
-<h2>Port Scanner</h2>
 </body>
 </html>
