add footer and more information to pages

--- a/cw.html
+++ b/cw.html
@@ -26,7 +26,22 @@
     <h1>CyberWomen Groups C.I.C</h1>
     <p><a href="https://cyberwomengroups.org.uk/">CyberWomen Groups</a> is a Community Interest Company that is working towards increasing the gender diversity in the cyber security field. All branches are run by students at their respective universities,</p>
     <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
-    <br>
-    <p>More info loading...</p>
-</section></body>
+</section>
+<footer class="text-center foot">
+    <div class="container p-4 pb-0">
+      <section class="mb-4">
+    
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
+          target="_blank"><i class="fab fa-linkedin-in"></i
+        ></a>
+  
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://github.com/cg-1256" role="button"
+          target="_blank"><i class="fab fa-github"></i
+        ></a>
+      </section>
+    </div>
+  </footer>
+</body>
+<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+
 </html>
