--- a/index.html
+++ b/index.html
@@ -24,9 +24,30 @@
     <h1>$whoami</h1>
     <h3>Raffi Rizzo</h2>
     <br>
-    <p>I am a second year Cyber Security student at the University of Warwick, based in the West Midlands.</p>
+    <p>My name is Raffi, however I typically have my name as 'cg-1256' (sometimes cg-1256-8345) online. I am a second year Cyber Security student at the <a href="https://warwick.ac.uk/fac/sci/wmg/study/undergraduate/cyber-security/" target="_blank">University of Warwick</a>, based in the West Midlands, who is also a part of the <a href="https://www.butl.org.uk/" target="_blank">British University Taekwondo League</a>.</p>
     <br>
     <p>As well as my studies, I have participated in the most recent <a href="https://www.ukcyber912.co.uk/" target="_blank">Cyber 9/12</a> challenge, with my team successfully getting through to the semi-finals of the in-person BT Tower track. On top of this, we won the award for the 'Most Engaged' team of all competing teams.</p>
+    <br>
+    <p>If you wish to contact me, please message me on Linkedin: <a href="https://www.linkedin.com/in/raf-r" target="_blank">https://www.linkedin.com/in/raf-r</a></p>
 </section>
 </body>  
+
+<footer class="text-center foot">
+    <div class="container p-4 pb-0">
+      <section class="mb-4">
+    
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
+          target="_blank"><i class="fab fa-linkedin-in"></i
+        ></a>
+  
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://github.com/cg-1256" role="button"
+          target="_blank"><i class="fab fa-github"></i
+        ></a>
+      </section>
+    </div>
+  
+
+  </footer>
+
+<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
 </html>
