--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href='main.css' />
 
+    <i class="fa-regular fa-r"></i>
+ 
     <title>Raffi Rizzo</title>
 </head>
 <body>
@@ -23,8 +25,31 @@
     
 <section class="body">
     <h1>Projects</h1>
-    <p>This page is pending...</p>
+    <p>My personal Github username is <a href="https://github.com/cg-1256" target="_blank">cg-1256</a> and my university account is <a href="https://github.com/rafri" target="_blank">rafri</a>. I will denote what account the relevent project can be found on below.</p>
+
+    <h3>LaTeX Compiler</h3>
+    <p>A BASH script that compiles a .tex and a .bib file into a pdf file and then removes all files that are created in the process to keep the folder tidy. This project can be found on my personal GitHub.</p>
+
+    <h3>Port Scanner</h3>
+    <p>A Python program that will scan all ports on a range (determined by the user) and return which projects are open. This project can be found on my personal GitHub.</p>
 </section>
 
 </body>
+
+<footer class="text-center foot">
+    <div class="container p-4 pb-0">
+      <section class="mb-4">
+    
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
+          target="_blank"><i class="fab fa-linkedin-in"></i
+        ></a>
+  
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://github.com/cg-1256" role="button"
+          target="_blank"><i class="fab fa-github"></i
+        ></a>
+      </section>
+    </div>
+  </footer>
+  <script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+
 </html>
