--- a/cw.html
+++ b/cw.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/style.css') }}">
-    <link rel="icon" href="images/llap.svg" type="image/x-icon"/>
+    <link rel="stylesheet" href='main.css' />
+  
     <title>Raffi Rizzo</title>
-</head>
+    <link rel="icon" href="images/llap.svg" type="image/x-icon"/>
+  
+  </head>
 <body>
-<section>
-    <div id="header" >
-        <nav style="text-align: right">
+<header>
+    <h1></h1>
+    <div id="header" style="text-align: right;">
+        <nav>
             <ul>
-                <li><a href="index.html"><b><u>About</u></b></a></li>
-                <li><a href="cw.html">CyberWomen</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="cw.html"><b><u>CyberWomen</u></b></a></li>
                 <li><a href="projects.html">Projects</a>
             </ul>          
         </nav>
     </div>
-</section>
+</header>
     
-<section class="body">
-    {% block body %} {% endblock %}
-</section>
-</body>  
 
+<section class="body">
+    <h1>CyberWomen Groups C.I.C</h1>
+    <p><a href="https://cyberwomengroups.org.uk/">CyberWomen Groups</a> is a Community Interest Company that is working towards increasing the gender diversity in the cyber security field. All branches are run by students at their respective universities,</p>
+    <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
+</section>
 <footer class="text-center foot">
     <div class="container p-4 pb-0">
       <section class="mb-4">
@@ -38,9 +42,8 @@
         ></a>
       </section>
     </div>
-  
-
   </footer>
-
+</body>
 <script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+
 </html>
