--- a/cw.html
+++ b/cw.html
@@ -10,40 +10,26 @@
   
   </head>
 <body>
-<header>
-    <h1></h1>
-    <div id="header" style="text-align: right;">
-        <nav>
-            <ul>
-                <li><a href="index.html">About</a></li>
-                <li><a href="cw.html"><b><u>CyberWomen</u></b></a></li>
-                <li><a href="projects.html">Projects</a>
-            </ul>          
-        </nav>
-    </div>
-</header>
- 
-
-<section class="body">
-    <h1>CyberWomen Groups C.I.C</h1>
-    <p><a href="https://cyberwomengroups.org.uk/">CyberWomen Groups</a> is a Community Interest Company that is working towards increasing the gender diversity in the cyber security field. All branches are run by students at their respective universities,</p>
-    <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
-</section>
-<footer class="text-center foot">
-    <div class="container p-4 pb-0">
-      <section class="mb-4">
-    
-        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
+<body>
+    <aside>
+        <a href="index.html"> <i class="fa-solid fa-house" aria-hidden="true"></i>Home</a>    
+        <a href="cw.html"> <i class="fa-solid fa-venus" aria-hidden="true"></i><b>CyberWomen</b></a> 
+        <a href="projects.html"> <i class="fa-solid fa-code" aria-hidden="true"></i></i>Projects</a>
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
           target="_blank"><i class="fab fa-linkedin-in"></i
         ></a>
-  
-        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-light btn-floating m-1" href="https://github.com/cg-1256" role="button"
+
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://github.com/cg-1256" role="button"
           target="_blank"><i class="fab fa-github"></i
         ></a>
-      </section>
-    </div>
-  </footer>
+    </aside>
+    
+    <div class="main">
+        <h1>CyberWomen Groups C.I.C</h1>
+        <br>
+        <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
+      </div>
 </body>
-<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
 
+<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
 </html>
