--- a/index.html
+++ b/index.html
@@ -1,4 +1,35 @@
----
-layout: home
-# Index page
----
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href='main.css' />
+  
+    <title>Raffi Rizzo</title>
+    <link rel="icon" href="images/llap.svg" type="image/x-icon"/>
+  
+  </head>
+<body>
+<body>
+    <aside>
+        <a href="index.html"> <i class="fa-solid fa-house" aria-hidden="true"></i><b>Home</b> </a>    
+        <a href="cw.html"> <i class="fa-solid fa-venus" aria-hidden="true"></i>CyberWomen</a> 
+        <a href="projects.html"> <i class="fa-solid fa-code" aria-hidden="true"></i></i>Projects</a>
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
+          target="_blank"><i class="fab fa-linkedin-in"></i
+        ></a>
+
+        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://github.com/cg-1256" role="button"
+          target="_blank"><i class="fab fa-github"></i
+        ></a>
+    </aside>
+    
+    <div class="main">
+        <h1>$> whoami</h1>
+        <br>
+        <p>Hello, I am Raffi - a Cyber Security student at the University of Warwick in the English West Midlands.</p>
+    </div>
+</body>
+
+<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+</html>
