add information and beautify html

--- a/cw.html
+++ b/cw.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href='main.css' />
-  
+
     <title>Raffi Rizzo</title>
-    <link rel="icon" href="images/llap.svg" type="image/x-icon"/>
-  
-  </head>
-<body>
-<body>
-    <aside>
-        <a href="index.html"> <i class="fa-solid fa-house" aria-hidden="true"></i>Home</a>    
-        <a href="cw.html"> <i class="fa-solid fa-venus" aria-hidden="true"></i><b>CyberWomen</b></a> 
-        <a href="projects.html"> <i class="fa-solid fa-code" aria-hidden="true"></i></i>Projects</a>
-        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button"
-          target="_blank"><i class="fab fa-linkedin-in"></i
-        ></a>
+    <link rel="icon" href="images/r-solid.svg" type="image/x-icon" />
 
-        <a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://github.com/cg-1256" role="button"
-          target="_blank"><i class="fab fa-github"></i
-        ></a>
-    </aside>
-    
-    <div class="main">
-        <h1>CyberWomen Groups C.I.C</h1>
-        <br>
-        <p>Since May 2023, I have had the opportunity to represent CyberWomen@Warwick as the Educations Officer.</p>
-      </div>
-</body>
+</head>
 
-<script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+<body>
+
+    <body>
+        <aside>
+            <a href="index.html"> <i class="fa-solid fa-house" aria-hidden="true"></i>Home</a>
+            <a href="cw.html"> <i class="fa-solid fa-venus" aria-hidden="true"></i><b>CyberWomen</b></a>
+            <a href="projects.html"> <i class="fa-solid fa-code" aria-hidden="true"></i></i>Projects</a>
+            <ul class="icons">
+                <li><a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://www.linkedin.com/in/raf-r" role="button" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating m-1" href="https://github.com/cg-1256" role="button" target="_blank"><i class="fab fa-github"></i></a></li>
+            </ul>
+        </aside>
+
+        <div class="main">
+            <h1><u>CyberWomen Groups C.I.C</u></h1>
+            <p><a href="https://cyberwomengroups.org.uk/" target="_blank">CyberWomen Groups C.I.C</a> is an inclusive community that aims to increase the gender diversity within the Cyber Security industry. It is comprised of a general CyberWomen Groups executive committee that oversee and support the completely student led branches that make up the rest of CyberWomen Groups. I am part of the CyberWomen@Warwick branch.
+            </p>
+            <h2>> President (May/June 2024 - Present)</h2>
+            <p>I have recently taken on the position of president of the CyberWomen@Warwick branch. As our roles have just handed over, I have only represented the branch at 2 conferences under this role - CyberUK 2024 as an attendee and BSides Cheltenham 2024 as a speaker.
+            </p>
+
+            <br>
+            <h2>> Education Officer (May 2023 - May 2024)</h2>
+            <p>
+                As Education Officer for CyberWomen@Warwick, my main role was to lead the organisation and running of talks and workshops aimed at secondary school and sixth form students in the local area. These talks and workshops covered a variety of topics including cryptography, steganography and OSINT. Whenever the branch has recieved feedback on these workshops, it has been very positive which was reflected both during the actual workshops with student participation, as well as their reflections after the event.
+            </p>
+            <p>
+                As well as these events for secondary school students, I have also been part of the organising committee for the 2nd CyberWomen national conference in October 2023. This conference was attended by over 250 people and had a variety of speakers in attendance. For more information, please visit the CyberWomen Groups website.
+            </p>
+            <p>
+                Also during my time as Eduation Officer, I participated in the UK Cyber 9/12 Strategy Challenge 2024 on the BT Tower / in person track. My team - <a href="https://www.linkedin.com/company/hack-tothefuture/" target="_blank">Hack To The Future</a> was one of the semi-final teams and won the 'Most Engaged Team' award.
+            </p>
+        </div>
+    </body>
+
+    <script src="https://kit.fontawesome.com/b9ec6ecf4d.js" crossorigin="anonymous"></script>
+
 </html>
